Tue Jun 11 18:04:08 BST 2002  Olly Betts <olly@survex.com>

	* More C++ like interfaces (e.g. bool returns, strings rather than
	  pointer/length pairs).

Tue Jun 11 16:40:08 BST 2002  Richard Boulton <richard@tartarus.org>

	* quartz/btree.cc: Fix so that it compiles when BTREE_FULL_DEBUG is on,
	  and added a couple of Assert()s.

Tue Jun 11 13:09:39 BST 2002  Olly Betts <olly@survex.com>

	* Removed a number of btree functions which were simply wrappers for
	  calling methods on their first parameter, and most of which weren't
	  even used!

	* btree_api.txt: updated to better reflect the object-ized API.

Tue Jun 11 02:01:53 BST 2002  Olly Betts <olly@survex.com>

	* Btree::make_index_item(): Added check for buffer overflow.

Tue Jun 11 01:49:51 BST 2002  Olly Betts <olly@survex.com>

	* Still more...

Tue Jun 11 01:08:03 BST 2002  Olly Betts <olly@survex.com>

	* More btree and quartz tidying.

Mon Jun 10 20:33:24 BST 2002  Olly Betts <olly@survex.com>

	* btree.cc,btree.h: cleaned up further.

Mon Jun 10 15:54:49 BST 2002  Olly Betts <olly@survex.com>

	* Further btree and quartz cleanups.

Mon Jun 10 14:46:00 BST 2002  Olly Betts <olly@survex.com>

	* Fixed typo in recent quartzdump change.

Mon Jun 10 13:20:20 BST 2002  Olly Betts <olly@survex.com>

	* Quartz clean-ups - especially QuartzTermList.

Mon Jun 10 12:18:40 BST 2002  Olly Betts <olly@survex.com>

	* Bcursor_create made a method of class Btree as suggested by a FIXME.

Mon Jun 10 01:57:53 BST 2002  Olly Betts <olly@survex.com>

	* More btree fixes and tidying.  Fixed bug introduced by typo in
	  previous change which causes tests to fail.

Sun Jun 09 17:50:28 BST 2002  Olly Betts <olly@survex.com>

	* btree_util.h: use inlines rather than macros.

	* Fix CompileTimeAssert() to avoid potential clashes.

Sun Jun 09 12:46:25 BST 2002  Olly Betts <olly@survex.com>

	* btree.cc,btree.h: fixed bug caused by local variable masking member
	  variable with same name.  Tidied up a lot.
